Step-3 ( Bison )/YACC (Bison)/Code/y.output
Terminals unused in grammar

   CONST_CHAR
   COMMENT
   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   STRING
   BITOP


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN error

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier
   14               | %empty

   15 $@1: %empty

   16 $@2: %empty

   17 $@3: %empty

   18 compound_statement: LCURL $@1 statements $@2 RCURL $@3
   19                   | LCURL RCURL

   20 var_declaration: type_specifier declaration_list SEMICOLON
   21                | type_specifier declaration_list error

   22 type_specifier: INT
   23               | FLOAT
   24               | VOID

   25 declaration_list: declaration_list COMMA ID
   26                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   27                 | ID
   28                 | ID LTHIRD CONST_INT RTHIRD

   29 statements: statement
   30           | statements statement

   31 statement: var_declaration
   32          | expression_statement
   33          | compound_statement
   34          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement
   36          | IF LPAREN expression RPAREN statement ELSE statement
   37          | WHILE LPAREN expression RPAREN statement
   38          | PRINTLN LPAREN ID RPAREN SEMICOLON
   39          | PRINTLN LPAREN ID RPAREN error
   40          | RETURN expression SEMICOLON
   41          | RETURN expression error

   42 expression_statement: SEMICOLON
   43                     | expression SEMICOLON
   44                     | expression error

   45 variable: ID
   46         | ID LTHIRD expression RTHIRD

   47 expression: logic_expression
   48           | variable ASSIGNOP logic_expression

   49 logic_expression: rel_expression
   50                 | rel_expression LOGICOP rel_expression

   51 rel_expression: simple_expression
   52               | simple_expression RELOP simple_expression

   53 simple_expression: term
   54                  | simple_expression ADDOP term

   55 term: unary_expression
   56     | term MULOP unary_expression

   57 unary_expression: ADDOP unary_expression
   58                 | NOT unary_expression
   59                 | factor

   60 factor: variable
   61       | ID LPAREN argument_list RPAREN
   62       | LPAREN expression RPAREN
   63       | CONST_INT
   64       | CONST_FLOAT
   65       | variable INCOP
   66       | variable DECOP

   67 argument_list: arguments
   68              | %empty

   69 arguments: arguments COMMA logic_expression
   70          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256) 8 21 39 41 44
ID (258) 7 8 9 10 12 25 26 27 28 38 39 45 46 61
CONST_INT (259) 26 28 63
CONST_FLOAT (260) 64
CONST_CHAR (261)
ADDOP (262) 54 57
MULOP (263) 56
LOGICOP (264) 50
RELOP (265) 52
COMMENT (266)
IF (267) 35 36
ELSE (268) 36
FOR (269) 34
WHILE (270) 37
DO (271)
BREAK (272)
CONTINUE (273)
INT (274) 22
FLOAT (275) 23
CHAR (276)
DOUBLE (277)
VOID (278) 24
RETURN (279) 40 41
SWITCH (280)
CASE (281)
DEFAULT (282)
INCOP (283) 65
DECOP (284) 66
ASSIGNOP (285) 48
LPAREN (286) 7 8 9 34 35 36 37 38 39 61 62
RPAREN (287) 7 8 9 34 35 36 37 38 39 61 62
LCURL (288) 18 19
RCURL (289) 18 19
LTHIRD (290) 26 28 46
RTHIRD (291) 26 28 46
SEMICOLON (292) 7 20 38 40 42 43
COMMA (293) 10 11 25 26 69
STRING (294)
NOT (295) 58
PRINTLN (296) 38 39
BITOP (297)
second_precedence (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
start (45)
    on left: 1, on right: 0
program (46)
    on left: 2 3, on right: 1 2
unit (47)
    on left: 4 5 6, on right: 2 3
func_declaration (48)
    on left: 7 8, on right: 5
func_definition (49)
    on left: 9, on right: 6
parameter_list (50)
    on left: 10 11 12 13 14, on right: 7 8 9 10 11
compound_statement (51)
    on left: 18 19, on right: 9 33
$@1 (52)
    on left: 15, on right: 18
$@2 (53)
    on left: 16, on right: 18
$@3 (54)
    on left: 17, on right: 18
var_declaration (55)
    on left: 20 21, on right: 4 31
type_specifier (56)
    on left: 22 23 24, on right: 7 8 9 10 11 12 13 20 21
declaration_list (57)
    on left: 25 26 27 28, on right: 20 21 25 26
statements (58)
    on left: 29 30, on right: 18 30
statement (59)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 29 30 34 35
    36 37
expression_statement (60)
    on left: 42 43 44, on right: 32 34
variable (61)
    on left: 45 46, on right: 48 60 65 66
expression (62)
    on left: 47 48, on right: 34 35 36 37 40 41 43 44 46 62
logic_expression (63)
    on left: 49 50, on right: 47 48 69 70
rel_expression (64)
    on left: 51 52, on right: 49 50
simple_expression (65)
    on left: 53 54, on right: 51 52 54
term (66)
    on left: 55 56, on right: 53 54 56
unary_expression (67)
    on left: 57 58 59, on right: 55 56 57 58
factor (68)
    on left: 60 61 62 63 64 65 66, on right: 59
argument_list (69)
    on left: 67 68, on right: 61
arguments (70)
    on left: 69 70, on right: 67 69


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   22 type_specifier: INT .

    $default  reduce using rule 22 (type_specifier)


State 2

   23 type_specifier: FLOAT .

    $default  reduce using rule 23 (type_specifier)


State 3

   24 type_specifier: VOID .

    $default  reduce using rule 24 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN parameter_list RPAREN error
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
   20 var_declaration: type_specifier . declaration_list SEMICOLON
   21                | type_specifier . declaration_list error

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN parameter_list RPAREN error
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
   27 declaration_list: ID .
   28                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 27 (declaration_list)


State 14

   20 var_declaration: type_specifier declaration_list . SEMICOLON
   21                | type_specifier declaration_list . error
   25 declaration_list: declaration_list . COMMA ID
   26                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    error      shift, and go to state 17
    SEMICOLON  shift, and go to state 18
    COMMA      shift, and go to state 19


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . parameter_list RPAREN error
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 14 (parameter_list)

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   28 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   21 var_declaration: type_specifier declaration_list error .

    $default  reduce using rule 21 (var_declaration)


State 18

   20 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 20 (var_declaration)


State 19

   25 declaration_list: declaration_list COMMA . ID
   26                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list . RPAREN error
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
   10 parameter_list: parameter_list . COMMA type_specifier ID
   11               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 24
    COMMA   shift, and go to state 25


State 21

   12 parameter_list: type_specifier . ID
   13               | type_specifier .

    ID  shift, and go to state 26

    $default  reduce using rule 13 (parameter_list)


State 22

   28 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 27


State 23

   25 declaration_list: declaration_list COMMA ID .
   26                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 28

    $default  reduce using rule 25 (declaration_list)


State 24

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN . error
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    error      shift, and go to state 29
    LCURL      shift, and go to state 30
    SEMICOLON  shift, and go to state 31

    compound_statement  go to state 32


State 25

   10 parameter_list: parameter_list COMMA . type_specifier ID
   11               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 33


State 26

   12 parameter_list: type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 27

   28 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 28 (declaration_list)


State 28

   26 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 29

    8 func_declaration: type_specifier ID LPAREN parameter_list RPAREN error .

    $default  reduce using rule 8 (func_declaration)


State 30

   18 compound_statement: LCURL . $@1 statements $@2 RCURL $@3
   19                   | LCURL . RCURL

    RCURL  shift, and go to state 35

    $default  reduce using rule 15 ($@1)

    $@1  go to state 36


State 31

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 32

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 9 (func_definition)


State 33

   10 parameter_list: parameter_list COMMA type_specifier . ID
   11               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 37

    $default  reduce using rule 11 (parameter_list)


State 34

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 38


State 35

   19 compound_statement: LCURL RCURL .

    $default  reduce using rule 19 (compound_statement)


State 36

   18 compound_statement: LCURL $@1 . statements $@2 RCURL $@3

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    WHILE        shift, and go to state 45
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 37

   10 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 38

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 39

   45 variable: ID .
   46         | ID . LTHIRD expression RTHIRD
   61 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 65
    LTHIRD  shift, and go to state 66

    $default  reduce using rule 45 (variable)


State 40

   63 factor: CONST_INT .

    $default  reduce using rule 63 (factor)


State 41

   64 factor: CONST_FLOAT .

    $default  reduce using rule 64 (factor)


State 42

   57 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable          go to state 67
    unary_expression  go to state 68
    factor            go to state 64


State 43

   35 statement: IF . LPAREN expression RPAREN statement
   36          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 69


State 44

   34 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 70


State 45

   37 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 71


State 46

   40 statement: RETURN . expression SEMICOLON
   41          | RETURN . expression error

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 72
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 47

   62 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 73
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 48

   42 expression_statement: SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 49

   58 unary_expression: NOT . unary_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable          go to state 67
    unary_expression  go to state 74
    factor            go to state 64


State 50

   38 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON
   39          | PRINTLN . LPAREN ID RPAREN error

    LPAREN  shift, and go to state 75


State 51

   33 statement: compound_statement .

    $default  reduce using rule 33 (statement)


State 52

   31 statement: var_declaration .

    $default  reduce using rule 31 (statement)


State 53

   20 var_declaration: type_specifier . declaration_list SEMICOLON
   21                | type_specifier . declaration_list error

    ID  shift, and go to state 76

    declaration_list  go to state 14


State 54

   18 compound_statement: LCURL $@1 statements . $@2 RCURL $@3
   30 statements: statements . statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    WHILE        shift, and go to state 45
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49
    PRINTLN      shift, and go to state 50

    $default  reduce using rule 16 ($@2)

    compound_statement    go to state 51
    $@2                   go to state 77
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 78
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 55

   29 statements: statement .

    $default  reduce using rule 29 (statements)


State 56

   32 statement: expression_statement .

    $default  reduce using rule 32 (statement)


State 57

   48 expression: variable . ASSIGNOP logic_expression
   60 factor: variable .
   65       | variable . INCOP
   66       | variable . DECOP

    INCOP     shift, and go to state 79
    DECOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 60 (factor)


State 58

   43 expression_statement: expression . SEMICOLON
   44                     | expression . error

    error      shift, and go to state 82
    SEMICOLON  shift, and go to state 83


State 59

   47 expression: logic_expression .

    $default  reduce using rule 47 (expression)


State 60

   49 logic_expression: rel_expression .
   50                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 49 (logic_expression)


State 61

   51 rel_expression: simple_expression .
   52               | simple_expression . RELOP simple_expression
   54 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 51 (rel_expression)


State 62

   53 simple_expression: term .
   56 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 53 (simple_expression)


State 63

   55 term: unary_expression .

    $default  reduce using rule 55 (term)


State 64

   59 unary_expression: factor .

    $default  reduce using rule 59 (unary_expression)


State 65

   61 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    $default  reduce using rule 68 (argument_list)

    variable           go to state 67
    logic_expression   go to state 88
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64
    argument_list      go to state 89
    arguments          go to state 90


State 66

   46 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 91
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 67

   60 factor: variable .
   65       | variable . INCOP
   66       | variable . DECOP

    INCOP  shift, and go to state 79
    DECOP  shift, and go to state 80

    $default  reduce using rule 60 (factor)


State 68

   57 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 57 (unary_expression)


State 69

   35 statement: IF LPAREN . expression RPAREN statement
   36          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 92
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 70

   34 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    expression_statement  go to state 93
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 71

   37 statement: WHILE LPAREN . expression RPAREN statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 94
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 72

   40 statement: RETURN expression . SEMICOLON
   41          | RETURN expression . error

    error      shift, and go to state 95
    SEMICOLON  shift, and go to state 96


State 73

   62 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 97


State 74

   58 unary_expression: NOT unary_expression .

    $default  reduce using rule 58 (unary_expression)


State 75

   38 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON
   39          | PRINTLN LPAREN . ID RPAREN error

    ID  shift, and go to state 98


State 76

   27 declaration_list: ID .
   28                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 27 (declaration_list)


State 77

   18 compound_statement: LCURL $@1 statements $@2 . RCURL $@3

    RCURL  shift, and go to state 99


State 78

   30 statements: statements statement .

    $default  reduce using rule 30 (statements)


State 79

   65 factor: variable INCOP .

    $default  reduce using rule 65 (factor)


State 80

   66 factor: variable DECOP .

    $default  reduce using rule 66 (factor)


State 81

   48 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 67
    logic_expression   go to state 100
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 82

   44 expression_statement: expression error .

    $default  reduce using rule 44 (expression_statement)


State 83

   43 expression_statement: expression SEMICOLON .

    $default  reduce using rule 43 (expression_statement)


State 84

   50 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 67
    rel_expression     go to state 101
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 85

   54 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable          go to state 67
    term              go to state 102
    unary_expression  go to state 63
    factor            go to state 64


State 86

   52 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 67
    simple_expression  go to state 103
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 87

   56 term: term MULOP . unary_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable          go to state 67
    unary_expression  go to state 104
    factor            go to state 64


State 88

   70 arguments: logic_expression .

    $default  reduce using rule 70 (arguments)


State 89

   61 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 105


State 90

   67 argument_list: arguments .
   69 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 106

    $default  reduce using rule 67 (argument_list)


State 91

   46 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 107


State 92

   35 statement: IF LPAREN expression . RPAREN statement
   36          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 108


State 93

   34 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    expression_statement  go to state 109
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 94

   37 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 110


State 95

   41 statement: RETURN expression error .

    $default  reduce using rule 41 (statement)


State 96

   40 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 40 (statement)


State 97

   62 factor: LPAREN expression RPAREN .

    $default  reduce using rule 62 (factor)


State 98

   38 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON
   39          | PRINTLN LPAREN ID . RPAREN error

    RPAREN  shift, and go to state 111


State 99

   18 compound_statement: LCURL $@1 statements $@2 RCURL . $@3

    $default  reduce using rule 17 ($@3)

    $@3  go to state 112


State 100

   48 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 48 (expression)


State 101

   50 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 50 (logic_expression)


State 102

   54 simple_expression: simple_expression ADDOP term .
   56 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 54 (simple_expression)


State 103

   52 rel_expression: simple_expression RELOP simple_expression .
   54 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 52 (rel_expression)


State 104

   56 term: term MULOP unary_expression .

    $default  reduce using rule 56 (term)


State 105

   61 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 61 (factor)


State 106

   69 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 67
    logic_expression   go to state 113
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 107

   46 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 46 (variable)


State 108

   35 statement: IF LPAREN expression RPAREN . statement
   36          | IF LPAREN expression RPAREN . statement ELSE statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    WHILE        shift, and go to state 45
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 114
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 109

   34 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    LPAREN       shift, and go to state 47
    NOT          shift, and go to state 49

    variable           go to state 57
    expression         go to state 115
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 110

   37 statement: WHILE LPAREN expression RPAREN . statement

    ID           shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ADDOP        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    WHILE        shift, and go to state 45
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 116
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 111

   38 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON
   39          | PRINTLN LPAREN ID RPAREN . error

    error      shift, and go to state 117
    SEMICOLON  shift, and go to state 118


State 112

   18 compound_statement: LCURL $@1 statements $@2 RCURL $@3 .

    $default  reduce using rule 18 (compound_statement)


State 113

   69 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 69 (arguments)


State 114

   35 statement: IF LPAREN expression RPAREN statement .
   36          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 119

    $default  reduce using rule 35 (statement)


State 115

   34 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 120


State 116

   37 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 37 (statement)


State 117

   39 statement: PRINTLN LPAREN ID RPAREN error .

    $default  reduce using rule 39 (statement)


State 118

   38 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 38 (statement)


State 119

   36 statement: IF LPAREN expression RPAREN statement ELSE . statement
